refractor(container): fix the style names

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <div class="header"><h1> Tic Tac @ Hiver</h1></div>
 
-<div class="parentTop">
-    <div class="gridTop">
+<div class="parent-top">
+    <div class="grid-top">
         <div id="grid">
 
         </div>
